2009-12-14  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-28.
    * R/autojags: fix a bug in the condtion of checking convergence 

2009-11-9  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-27.
    * R/jags: 
      1. change the way to specify the working directory.
      2. allow data to be list of data object.
    * R/jags2: 
      1. change the way to specify the working directory.
      2. allow data to be list of data object.
      3. coda outputs are now named as CODAchain1 and CODAIndex
    * R/jags.sim: read coda output as CODAchain1 and CODAIndex

2009-10-12  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-26.
    * R/jags: get rid of parameter n.sims


2009-8-18  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-25.
    * add attach.jags and detach.jags functions.

2009-8-6  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-24.
    * fix a bug in jags.sim and as.bugs.array2 (DIC calculation)
      thanks to Luwis Diya

2009-5-4  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-23.
    * fix jags.sim and as.bugs.array2 to be consistent with WinBUGS output (sims.list)

2009-4-13  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-22.
    * delete the option n.adapt for jags() and incorporate that into n.burnin
      This is to make jags() more consistent with bugs().

2009-3-10  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-21.
    * pass option "progress.bar" to functions

2009-3-8  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-20.
    * n.adpate in jags.model now set to 0 but use adapte() to adapte 
      jags.model.

2009-3-7  Yu-Sung Su <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-19.
    * add refresh rate option for the progress bar.


2009-3-4  Yu-Sung Su <ys463@columbia.edu>  